--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   chewie: ^0.9.8+1
   provider: ^4.0.4
   firebase_auth: ^0.15.4
+  fluttertoast: ^3.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
