--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   provider: ^4.0.4
   firebase_auth: ^0.15.4
   fluttertoast: ^3.1.3
+  english_words: ^3.1.5
+  image_picker: ^0.5.3+1
+  font_awesome_flutter: ^8.2.0
+  firebase_storage: ^3.1.1
+  youtube_player_flutter: ^6.0.3+2
+  http: ^0.12.0+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
