--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_storage: ^3.1.1
   youtube_player_flutter: ^6.0.3+2
   http: ^0.12.0+4
+  kakao_flutter_sdk: ^0.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
