--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   chewie: ^0.9.8+1
   provider: ^4.0.4
   firebase_auth: ^0.15.5+2
-#  fluttertoast: ^3.1.3
+  fluttertoast: ^3.1.3
   english_words: ^3.1.5
   image_picker: ^0.5.3+1
   font_awesome_flutter: ^8.2.0
