--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   chewie: ^0.9.8+1
+  video_player: ^0.10.8+1
   provider: ^4.0.4
   firebase_auth: ^0.15.5+2
   fluttertoast: ^3.1.3
@@ -55,6 +56,7 @@ flutter:
   assets:
    - assets/loading.gif
    - videos/Prologue_Timelapse.mp4
+   - videos/loginPage.mov
    - assets/icons/singer.png
    - assets/icons/leader.png
    - assets/icons/rev_mic.png
