--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   video_player: ^0.10.8+1
   provider: ^4.0.4
   firebase_auth: ^0.15.5+2
+  apple_sign_in: ^0.1.0
+#  flutter_kakao_login: ^0.7.0
+  flutter_auth_buttons: ^0.6.0
   fluttertoast: ^3.1.3
   english_words: ^3.1.5
   image_picker: ^0.5.3+1
