--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   english_words: ^3.1.5
   image_picker: ^0.5.3+1
   font_awesome_flutter: ^8.2.0
+  auto_size_text: ^2.1.0
   firebase_storage: ^3.1.1
   youtube_player_flutter: ^6.0.3+2
   http: ^0.12.0+4
