--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   font_awesome_flutter: ^8.2.0
   auto_size_text: ^2.1.0
   firebase_storage: ^3.1.1
+  cloud_firestore: ^0.13.4
   youtube_player_flutter: ^6.0.3+2
   http: ^0.12.0+4
 #  kakao_flutter_sdk: ^0.4.2
