--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   chewie: ^0.9.8+1
   video_player: ^0.10.8+1
   provider: ^4.0.4
-  firebase_auth: ^0.15.5+2
+  flutter_bloc: ^3.2.0
+  equatable: ^1.1.0
+  firebase_auth: 0.15.4
   apple_sign_in: ^0.1.0
 #  flutter_kakao_login: ^0.7.0
   flutter_auth_buttons: ^0.6.0
@@ -31,11 +33,12 @@ dependencies:
   image_picker: ^0.5.3+1
   font_awesome_flutter: ^8.2.0
   auto_size_text: ^2.1.0
-  firebase_storage: ^3.1.1
-  cloud_firestore: ^0.13.4
+  firebase_storage: 3.1.1
+  cloud_firestore: 0.13.4
   youtube_player_flutter: ^6.0.3+2
   http: ^0.12.0+4
-#  kakao_flutter_sdk: ^0.4.2
+  json_annotation: ^3.0.1
+  #  kakao_flutter_sdk: ^0.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +47,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+#  build_runner:
+#  json_serializable: ^3.2.2
 
 
 # For information on the generic Dart part of this file, see the
