--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   youtube_player_flutter: ^6.1.0+4
   http: ^0.12.0+4
   json_annotation: ^3.0.1
+  url_launcher: ^3.0.0
   #  kakao_flutter_sdk: ^0.4.2
 
   # The following adds the Cupertino Icons font to your application.
